--- a/templates/posts/index.twig
+++ b/templates/posts/index.twig
@@ -1,7 +1,19 @@
 {% extends "_layouts/base" %}
 
+{% set posts = craft
+    .entries()
+    .section("posts")
+    .all()  %}
+
 {% block content %}
     <h1>Posts...</h1>
+    <ul>
+        {% for post in posts %}
+            <li>
+                <a href="{{ post.url() }}">{{ post.title }}</a>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
 
 {% block scripts %}
