--- a/templates/_layouts/base.twig
+++ b/templates/_layouts/base.twig
@@ -19,7 +19,7 @@
                     <a href="{{ url('/login') }}">Login</a>
                 </li>
             </ul>
-        </navcl>
+        </nav>
         {% block content %}{% endblock %}
 
         {{ craft.vite.script("src/js/app.ts") }}
