--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,7 +1,8 @@
 {% extends "_layouts/base" %}
 
 {% block content %}
-    <h1 class="text-2xl">Welcome to {{ siteName }}!!</h1>
+    <h1 class="text-2xl">Welcome to {{ siteName }}!</h1>
+    <div id="component-container"></div>
 {% endblock %}
 
 {% block scripts %}
