--- a/templates/posts/index.twig
+++ b/templates/posts/index.twig
@@ -1,21 +1,26 @@
 {% extends "_layouts/base" %}
 
 {% set posts = craft
-    .entries()
-    .section("posts")
-    .all()  %}
+  .entries()
+  .section("posts")
+  .all() %}
 
 {% block content %}
-    <h1>Posts...</h1>
-    <ul>
-        {% for post in posts %}
-            <li>
-                <a href="{{ post.url() }}">{{ post.title }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+  <h1>Posts...</h1>
+  <div id="posts-container"></div>
+  <div id="async-posts-container"></div>
 {% endblock %}
 
+{% js %}
+  window.posts = {{ posts | json_encode | raw }}
+{% endjs %}
+
 {% block scripts %}
-    {{ craft.vite.script("src/js/pages/posts/index.ts")}}
+  {{ craft.vite.script(
+    "src/js/pages/posts/index.ts",
+    true,
+    {
+      'data-posts': posts | json_encode | raw
+    }
+  ) }}
 {% endblock %}
