--- a/web/main.css
+++ b/web/main.css
@@ -517,9 +517,9 @@ video {
   display: block;
 }
 
-.bg-black {
+.bg-orange-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .bg-red-500 {
