--- a/templates/_layouts/base.twig
+++ b/templates/_layouts/base.twig
@@ -6,22 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/main.css">
     </head>
-    <body>
-        <nav class="bg-red-500">
-            <ul>
-                <li>
-                    <a href="{{ url('/') }}">Home</a>
-                </li>
-                <li>
-                    <a href="{{ url('/posts') }}">Posts</a>
-                </li>
-                <li>
-                    <a href="{{ url('/login') }}">Login</a>
-                </li>
-            </ul>
-        </nav>
-        {% block content %}{% endblock %}
-
+    <body class="bg-stone-300">
+        {% include "_includes/navbar.twig" %}
+        <div class="container mx-auto">
+            {% block content %}{% endblock %}
+        </div>
         {{ craft.vite.script("src/js/app.ts") }}
         {% block scripts %}{% endblock %}
     </body>
