--- a/templates/companies/sfc-vue/server-side/index.twig
+++ b/templates/companies/sfc-vue/server-side/index.twig
@@ -7,7 +7,9 @@
 
 {% block content %}
     {% include "_includes/heading" with { text: "Companies - SFC Vue - Server Side"} %}
-    <div id="companies-container"></div>
+    <div id="companies-container">
+
+    </div>
 {% endblock %}
 
 {% js %}
