--- a/templates/companies/petite-vue/async/index.twig
+++ b/templates/companies/petite-vue/async/index.twig
@@ -7,7 +7,7 @@
     v-scope
   >
     <div class="mb-5" @click="viewAddCompanyForm()" v-if="!showForm" v-scope="Button({ text: 'Add Company', color: 'emerald' })"></div>
-    <ul v-show="showCompanies && !loading" class="grid md:grid-cols-2 lg:grid-cols-4 gap-4">
+    <ul v-show="view === viewTypes.details && !loading" class="grid md:grid-cols-2 lg:grid-cols-4 gap-4">
       <li v-for="company in companies" class="border-stone-400 border-solid border-2 p-3 rounded">
         <h2 class="text-center mb-3">
           #{company.title}
@@ -111,9 +111,17 @@
       };
     }
 
+    const VIEW_TYPES = {
+      details: "DETAILS",
+      form: "FORM",
+      companies: "COMPANIES"
+    };
+
     createApp({
       Button,
       Form,
+      viewTypes: VIEW_TYPES,
+      view: VIEW_TYPES.details,
       companies: null,
       selectedCompany: null,
       loading: false,
